--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.5.2",
     "apexcharts": "^3.26.0",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.4",
     "next": "10.1.3",
     "react": "17.0.2",
@@ -23,22 +24,27 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.16.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.6",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
-    "eslint": "^5.16.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.41",
     "prettier": "^2.3.1",
     "typescript": "^4.2.4"
   }
